crates/rstest-bdd/tests/fixtures_macros/step_struct_pattern.stderr
error: invalid step function signature: unsupported parameter pattern `User { name }`; use a simple identifier (e.g., `arg: T`)
  --> tests/fixtures_macros/step_struct_pattern.rs:11:21
   |
11 | fn step_with_struct(User { name }: User) {}
   |                     ^^^^^^^^^^^^^
   |
   = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.
